--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h2>Termos de Compra</h2>
 
 <pre style="white-space:pre-wrap;font-family:inherit;">
-# TERMOS DE COMPRAS DA ZERO MC 
+# TERMOS DE COMPRAS
 
 - PARA COMPRAR BASTA ABRIR UM TICKET NO DISCORD
 
