--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div style="display:flex;justify-content:space-between;align-items:center;">
     <div>
-      <h1 style="margin:0;">Zero MC Store</h1>
+      <h1 style="margin:0;">Store</h1>
       <div class="small">Bedrock • Semi Anarquia</div>
     </div>
     <a href="admin.html" class="btn">Admin</a>
