--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zero MC Store - Admin</title>
+<title>Store - Admin</title>
 
 <link rel="stylesheet" href="assets/style.css">
 <script type="module" src="assets/admin.js"></script>
@@ -12,7 +12,7 @@
 
 <div class="container">
 
-  <h1>Zero MC Store • Admin</h1>
+  <h1>Store • Admin</h1>
 
   <!-- LOGIN -->
   <div id="loginCard" class="card">
