--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </div>
 
   <div class="small" style="margin-top:20px;">
-    © 2025 Zero MC • Créditos a RT
+    © 2026 Fury MC • Créditos a RT
   </div>
 
 </div>
