--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Zero MC Store</title>
+<title>Fury MC Store</title>
 
 <link rel="stylesheet" href="assets/style.css">
 <script type="module" src="assets/app.js"></script>
